<resources>

    <string name="app_name">Android Nanodegree Portfolio</string>
    <string name="portfolio_header">Nanodegree Apps</string>
    <string name="action_settings">Settings</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone">Capstone</string>
</resources>
