<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".PortfolioActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portfolio_header"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        />
    <Button
        android:layout_width="wrap_content"
        android:minWidth="@dimen/button_min_width"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:layout_width="wrap_content"
        android:minWidth="@dimen/button_min_width"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="launchScoresApp"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:layout_width="wrap_content"
        android:minWidth="@dimen/button_min_width"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:onClick="launchLibraryApp"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:layout_width="wrap_content"
        android:minWidth="@dimen/button_min_width"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:onClick="launchBuildItBigger"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:layout_width="wrap_content"
        android:minWidth="@dimen/button_min_width"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:onClick="launchXyzReader"
        android:theme="@style/PrimaryButton"/>

    <Button
        android:layout_width="wrap_content"
        android:minWidth="@dimen/button_min_width"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:onClick="launchCapstone"
        android:theme="@style/AccentButton"/>
</RelativeLayout>
</ScrollView>